first commit add certi 1

--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
 
                 <div class="work__container bd-grid">
                     <a href="" class="work__img">
+                        <img src="git Udemy certi.jpg" alt="">
+                    </a>
+                    <a href="" class="work__img">
                         <img src="IMG1.jpg" alt="">
                     </a>
                     <a href="" class="work__img">
