--- a/index.html
+++ b/index.html
@@ -154,27 +154,48 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
+
+                    
                     <a href="" class="work__img">
                         <img src="git Udemy certi.jpg" alt="">
                     </a>
+
                     <a href="" class="work__img">
                         <img src="IMG1.jpg" alt="">
                     </a>
+
                     <a href="" class="work__img">
                         <img src="PXL2.jpg" alt="">
                     </a>
+
+                    <a href="" class="work__img">
+                        <img src="photo 11.jpg" alt="">
+                    </a>
+
+                    <a href="" class="work__img">
+                        <img src="photo12.jpg" alt="">
+                    </a>
+
+                    <a href="" class="work__img">
+                        <img src="photo13.jpg" alt="">
+                    </a>
+
                     <a href="" class="work__img">
                         <img src="PXL3.jpg" alt="">
                     </a>
+
                     <a href="" class="work__img">
                         <img src="PXL4.jpg" alt="">
                     </a>
+
                     <a href="" class="work__img">
                         <img src="PXL5.jpg" alt="">
                     </a>
+
                     <a href="" class="work__img">
                         <img src="IMG6.jpg" alt="">
                     </a>
+                    
                 </div>
             </section>
 
